# zero-point-verifiable-physics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UPGRADE.md  performance_results.csv  run_demo.sh  simple_visualize.py  visualize_black_hole.py
docs/: api.md  application_integration.md  architecture.md  benchmarking.md  binary_space_tree.md  collision_detection.md  collision_response.md  constraint_system.md  contributing.md  customization.md  data_structures.md  demo_guide.md  hardware_acceleration.md  installation.md  integration_methods.md  integrity_checking.md  logging_and_monitoring.md  military_grade_solver.md  numerical_stability.md  performance_optimization.md  real_time_features.md  scheduler.md  verification.md  visualization.md  zk_corom_light.md
include/: entropic_gateway.hpp  non_euclidean.hpp  physics_engine.hpp  types.hpp
sdk/: CMakeLists.txt  README.md
sdk/examples/: vr_physics_demo.cpp
sdk/include/: hardware_acceleration.hpp  high_performance_renderer.hpp  multi_sensory_system.hpp  physics_simulator.hpp  sdk_core.hpp  tree_binary.hpp  tree_binary_env.hpp  zk_corom_circuit.hpp
sdk/src/: sdk_core.cpp
src/: entropic_gateway.cpp  non_euclidean.cpp  physics_engine.cpp
test/: black_hole_simulation.cpp  performance_test.cpp  test_engine.cpp
test/military_demo/: military_grade_simulation.cpp
zero_point/: CMakeLists.txt
zero_point/core/: binary_space_tree.cpp  binary_space_tree.hpp  fault_tolerance.hpp  formal_verify.cpp  formal_verify.hpp  integrity_check.cpp  integrity_check.hpp  intent_heap.cpp  intent_heap.hpp  numerical_stability.cpp  numerical_stability.hpp  physics_solver.cpp  physics_solver.hpp  physics_solver_military.cpp  physics_solver_military.hpp  rt_scheduler.cpp  rt_scheduler.hpp  zk_corom_light.cpp  zk_corom_light.hpp
